Moderator portal: improve ticket navigation and add page for finished tickets

--- a/app/templates/manage/administrator/portal.twig
+++ b/app/templates/manage/administrator/portal.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Administrator'|trans %}
+{% set title = 'Administrator portal'|trans %}
 
 {% block content %}
 	<div class="page-header">
