--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -101,11 +101,15 @@ footer span, footer span a {
 
 .jumbotron {
 	padding: 30px 0 50px 0;
-}
 
-.jumbotron h1 {
-	font-size: 30px;
-	line-height: 1.1;
+    h1 {
+        font-size: 30px;
+        line-height: 1.1;
+    }
+    
+    p.help-block {
+        font-size: 1em;
+    }
 }
 
 #identify.jumbotron {
