--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -87,6 +87,9 @@ footer span a {
   font-size: 30px;
   line-height: 1.1;
 }
+.jumbotron p.help-block {
+  font-size: 1em;
+}
 #identify.jumbotron {
   margin-top: 40px;
   padding: 25px 0 50px 0;
