--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -41,7 +41,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<h1>{% trans %}Your addons will appear here{% endtrans %}</h1>
-				<p>{% trans %}Visit the developer portal to get started with a new addon.{% endtrans %}</p>
+				<p>{% trans %}Visit the developer portal to get started.{% endtrans %}</p>
 				<p><a href="{{base}}/developers" class="btn btn-lg btn-info">{% trans %}Developer portal{% endtrans %}</a></p>
 			</div>
 		</div>
