--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -35,8 +35,8 @@
 						</div>
 					</form>					
 				{% else %}
-					<h2>{% trans %}Let's get started{% endtrans %}</h2>
-					<p class="lead">{% trans %}{{brand}} is ready to publish your addons.{% endtrans %}</p>
+					<h2>{% trans %}You have an awesome idea?{% endtrans %}</h2>
+					<p class="lead">{% trans %}You can create new addons here after you've registered.{% endtrans %}</p>
 					<p>
 						<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
 						<a href="{{base}}/login?returnto={{origpath}}" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
@@ -47,8 +47,8 @@
 			<div class="col-md-7">
 				{% if user_login %}
 					<hr class="visible-xs visible-sm">
-					<h2>{% trans %}You have an awesome idea?{% endtrans %}</h2>
-					<p class="lead">{% trans %}Whether it's magic caves or exploding Wipfs, {{brand}} is the place to publish your addons.{% endtrans %}</p>
+					<h2>{% trans %}Let's get started!{% endtrans %}</h2>
+					<p class="lead">{% trans %}Whether it's magic caves or exploding Wipfs, {{brand}} is the place to publish all your best addons.{% endtrans %}</p>
 					<p>
 						<a href="http://crdocs.clonkspot.org/de/sdk/" class="btn btn-lg btn-primary" target="_blank">{% trans %}Clonk Rage documentation{% endtrans %}</a>
 						<a href="http://wiki.openclonk.org/w/Development" class="btn btn-lg btn-primary" target="_blank">{% trans %}OpenClonk documentation{% endtrans %}</a>
