--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -89,16 +89,13 @@
 					<div class="row">
 						<div class="col-md-12 col-sm-6">
 							<h3>{% trans %}Reset{% endtrans%}</h3>
+							{% include 'functions/alert.twig' with {'selector' : 'reset'} %}
 							<form method="post">
 								<input type="hidden" name="state" value="{{state}}">
 								<div class="form-group">
-									<label for="support-confirm">{% trans %}Please type the username to confirm:{% endtrans %}</label>
-									<input type="text" class="form-control" id="support-confirm" required="yes">
+									<button type="submit" class="btn btn-warning btn-block support-button" name="password-reset-submit">{% trans %}Reset password{% endtrans %}</button>
 								</div>
-								<div class="form-group">
-									<button type="submit" class="btn btn-warning btn-block support-button">{% trans %}Reset password{% endtrans %}</button>								
-									<button type="submit" class="btn btn-warning btn-block support-button">{% trans %}Remove login services{% endtrans %}</button>
-								</div>
+								<p class="help-block">{% trans %}We'll send the user an email to reset their password.{% endtrans %}</p>
 							</form>
 						</div>
 						{% if user_administrator %}
@@ -136,17 +133,6 @@
 	{{ parent() }}
 
 	var username = "{{username}}";
-
-	$('.support-button').attr('disabled', true);
-	$('#support-confirm').on("change keyup paste", function() {
-	if($(this).val().toLowerCase() == username.toLowerCase()) {
-	$('.support-button').removeAttr('disabled');
-	$('#support-confirm').attr('disabled', true).off();
-	$(this).val(username);
-	} else {
-	$('.support-button').attr('disabled', true);
-	}
-	});
 
 	$('.remove-button').attr('disabled', true);
 	$('#remove-confirm').on("change keyup paste", function() {
