Moderator: make user protocol functional

--- a/app/templates/functions/user.twig
+++ b/app/templates/functions/user.twig
@@ -3,5 +3,5 @@
 {% if user.administrator %} <span class="label label-success">{% trans %}Administrator{% endtrans %}</span>
 {% elseif user.moderator %} <span class="label label-primary">{% trans %}Moderator{% endtrans %}</span>{% endif %}
 {% else %}
-{% trans %}Somebody{% endtrans %}
+{% trans %}Invalid user{% endtrans %}
 {% endif %}
