replace quotes in translated strings with entity code

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<h3 id="fanpage">{% trans %}Fan page{% endtrans %}</h3>
-				<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for "our" game.{% endtrans %}</p>
+				<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for &quot;our&quot; game.{% endtrans %}</p>
 				<p>{% trans %}This site is for new players to learn all about Clonk, to discover the huge database of addons and to help them get right into the game.{% endtrans %}</p>
 				<p><a href="{{base}}/about/clonk" class="btn btn-info">{% trans "Learn about Clonk" %}</a></p>
 			</div>
