--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -6,7 +6,7 @@
 	<div class="page-header">
 		<div class="container">
 			<h1>{{title}}</h1>
-			<p class="lead">{% trans %}Clonk is a unique two-dimensional game and often referred to as a mix of "The Settlers" and "Lemmings".{% endtrans %}</p>
+			<p class="lead">{% trans %}Clonk is a unique two-dimensional game and often referred to as a mix of &quot;The Settlers&quot; and &quot;Lemmings&quot;.{% endtrans %}</p>
 		</div>
 	</div>
 	<div class="container">
