--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -106,7 +106,7 @@
 									<div class="form-group">
 										<label for="remove-confirm">{% trans %}Please type the username to confirm:{% endtrans %}</label>
 										<input class="form-control" id="remove-confirm" type="text" required>
-										<p class="help-block">{% trans %}The account "{{username}}" will be <strong>permanently disabled</strong>.{% endtrans %}</p>
+										<p class="help-block">{% trans %}The account &quot;{{username}}&quot; will be <strong>permanently disabled</strong>.{% endtrans %}</p>
 									</div>
 									<div class="form-group">
 										<button type="submit" class="btn btn-danger btn-block remove-button">{% trans %}Disable account permamently{% endtrans %}</button>
