--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -20,8 +20,8 @@
 						<textarea class="form-control contact-form" name="message" rows="10" required>{{message}}</textarea>
 					</div>
 					{% if by %}
-						{% set sender = by|escape('html') %}
-						<p class="pull-right help-block">{% trans %}Will be sent as "{{sender}}".{% endtrans %}</p>
+						{% set sender = '<strong>' ~ by|escape('html') ~ '</strong>' %}
+						<p class="pull-right help-block">{% trans %}Will be sent as {{sender}}.{% endtrans %}</p>
 					{% endif %}
 					<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
 				</form>
