--- a/app/templates/user/table.twig
+++ b/app/templates/user/table.twig
@@ -5,7 +5,14 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{ title }}</h1>
+			<h1>
+				{{ title }}
+				{% if filter %}
+				<small>
+					<a href="{{base}}{{origpath}}" class="label label-default">{{filter}} <span aria-hidden="true">&times;</span></a>
+				</small>
+				{% endif %}
+			</h1>
 		</div>
 	</div>
 	{% if users %}
