update various strings

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -9,7 +9,7 @@
 	</div>
 	<div class="container">
 		<noscript>
-		<div class="alert alert-danger">{% trans %}Javascript needs to be activated in order to edit addons and releases.{% endtrans %}</div>
+		<div class="alert alert-danger">{% trans %}Javascript needs to be enabled in order to edit addons and releases.{% endtrans %}</div>
 		</noscript>
 		<ul class="nav nav-tabs" id="editAddonTabs">
 			<li class="active"><a href="#basic" data-toggle="tab">{% trans "Addon" %}</a></li>
