--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -14,8 +14,9 @@
 				<h2>{% trans %}We &hearts; feedback{% endtrans %}</h2>
 				<p>{% trans %}We here are fans of Clonk. We built this site as members of our community for the game and want to do our best.{% endtrans %}</p>
 				<p>{% trans %}If you have any wishes or should encounter any problem, do not hesitate to contact us:{% endtrans %}</p>
+				{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
+				{% if not hide_form %}
 				<form method="post">
-					{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
 					<div class="form-group">
 						<textarea class="form-control contact-form" name="message" rows="10" required>{{message}}</textarea>
 					</div>
@@ -25,6 +26,7 @@
 					{% endif %}
 					<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
 				</form>
+				{% endif %}
 			</div>
 			<div class="col-md-5">
 				<hr class="visible-xs visible-sm">
