add android color scheme

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -15,6 +15,7 @@
         <meta name="msapplication-square70x70logo" content="{{resources}}/lorry/img/lorry-70x70.png">
         <meta name="msapplication-square150x150logo" content="{{resources}}/lorry/img/lorry-150x150.png">
         <meta name="msapplication-TileColor" content="#FFFFFF">
+        <meta name="theme-color" content="#222222">
 		{% if fbid %}<meta property="fb:app_id" content="{{fbid}}">{% endif %}
 		<meta property="og:title" content="{{title|default(brand)}}">
 		<meta property="og:locale" content="{{locale}}">
