[to squash] various changes

--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -1,5 +1,7 @@
 {% extends 'root.twig' %}
 
+{% set title %}{{username}}{% endset%}
+
 {% block content %}
 	<div class="page-header">
 		<div class="breakout"><a href="{{base}}/users"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
