--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -9,14 +9,14 @@
 					{% if banners|length > 1 %}
                     <ol class="carousel-indicators">
                         {% for i in 0..banners|length - 1 %}
-						<li data-target="#featured-front" data-slide-to="{{i}}"{% if i == 0 %} class="active"{% endif %}></li>
+						<li data-target="#featured-front" data-slide-to="{{i}}"{% if loop.first %} class="active"{% endif %}></li>
                         {% endfor %}
  					</ol>
                     {% endif %}
 					<div class="carousel-inner">
 						{% for banner in banners %}
                         {% set url = banner.url|default(banner.defaultUrl) %}
-						<div class="item active">
+						<div class="item{% if loop.first %} active{% endif %}">
                             {% if url %}<a href="{{url}}">{% endif %}
 								<img src="{{banner.imageUrl|default(banner.defaultImageUrl)}}" alt="{{bannner.alt}}">
                             {% if url %}</a>{% endif %}
