--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -44,6 +44,8 @@
 				<dl>
 					<dt><a href="http://php.net/">PHP</a></dt>
 					<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
+					<dt><a href="https://www.mysql.com/">MySQL</a></dt>
+					<dd>by <a href="http://oracle.com/">Oracle</a>,</dd>
 					<dt><a href="http://redis.io/">Redis</a></dt>
 					<dd>by <a href="http://invece.org/">Salvatore Sanfilippo</a>,</dd>
 					<dt><a href="http://lesscss.org/">Less</a></dt>
@@ -52,8 +54,6 @@
 				<hr class="hidden-xs hidden-sm">
 				<h3 id="resources">{% trans "Resources" %}</h3>
 				<dl>
-					<dt><a href="http://getbootstrap.com/">Bootstrap</a></dt>
-					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/orgs/twbs/people">team</a>,</dd>
 					<dt><a href="http://glyphicons.com/">Glyphicons</a></dt>
 					<dd>by Jan Kovařík,</dd>
 					<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
@@ -67,14 +67,16 @@
 			<div class="col-md-4">
 				<h3 id="libraries">{% trans "Libraries" %}</h3>
 				<dl>
-					<dt><a href="http://twig.sensiolabs.org">Twig</a>, <a href="http://swiftmailer.org/">Swift Mailer</a> & <a href="http://symfony.com/components">various Symfony components</a></dt>
+					<dt><a href="http://twig.sensiolabs.org/">Twig</a>, <a href="http://swiftmailer.org/">Swift Mailer</a> & <a href="http://symfony.com/components">various Symfony components</a></dt>
 					<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
-					<dt><a href="http://auraphp.com/">Aura</a>.<a href="https://github.com/auraphp/Aura.SqlQuery/">SqlQuery</a></dt>
-					<dd>by the <a href="http://auraphp.com/community">Aura community</a>,</dd>
+					<dt><a href="http://www.doctrine-project.org/">Doctrine ORM &amp; DBAL</a></dt>
+					<dd>by <a href="https://github.com/orgs/doctrine/people">the Doctrine team</a>,</dd>
 					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/vend/php-resque">vend/php-resque</a></dt>
 					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="https://github.com/vend/php-resque#contributors">various contributors</a>,</dd>
 					<dt><a href="https://github.com/thephpleague/flysystem">Flysystem</a> & <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
 					<dd>by <a href="http://thephpleague.com/">the PHP League</a>,</dd>
+					<dt><a href="http://getbootstrap.com/">Bootstrap</a></dt>
+					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/orgs/twbs/people">team</a>,</dd>
 					<dt><a href="https://jquery.com/">jQuery</a></dt>
 					<dd>by the <a href="https://jquery.org/team/">jQuery team</a>,</dd>
 					<dt><a href="http://resumablejs.com/">Resumable.js</a></dt>
