--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -95,6 +95,8 @@
 				<hr class="hidden-xs hidden-sm">
 				<h3 id="credits">{% trans "Credits" %}</h3>
 				<dl>
+					<dt><span class="text-muted">thanking the</span> <a href="http://ccan.de/" title="[si&#720;k&#603;n]">CCAN</a>
+					<dd>for hosting addons for many years,</dd>
 					<dt><span class="text-muted">thanking the</span> <a href="http://clonkspot.org/">Clonkspot community</a>
 					<dd>for much-needed feedback and thoughts,</dd>
 					<dt><span class="text-muted">thanking the</span> <a href="http://forum.openclonk.org/">OpenClonk community</a></dt>
