fix my addons and developer portal

--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -22,10 +22,10 @@
 						<div class="form-group">
 							<label for="game">{% trans "Game" %}</label>
 							<div class="btn-group" data-toggle="buttons">
-								{% for short, current_game in games %}
+								{% for game in games %}
 									<label class="btn btn-default">
-										<img src="{{resources}}/custom/game/{{short}}.png" alt="{{current_game.title}}" class="img-responsive">
-										<input type="radio" name="game" value="{{short}}" {% if game == short %}checked {% endif %}required>
+										<img src="{{resources}}/custom/game/{{game.short}}.png" alt="{{game.title}}" class="img-responsive">
+										<input type="radio" name="game" value="{{game.title}}" {% if selected_game == game.short %}checked {% endif %}required>
 									</label>
 								{% endfor %}
 							</div>
