update game portal title

--- a/app/templates/addon/portal.twig
+++ b/app/templates/addon/portal.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Addons'|trans %}
+{% set title = 'Choose your game'|trans %}
 
 {% block content %}
 	<div class="page-header">
