--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -25,7 +25,7 @@
 								{% for game in games %}
 									<label class="btn btn-default">
 										<img src="{{resources}}/custom/game/{{game.short}}.png" alt="{{game.title}}" class="img-responsive">
-										<input type="radio" name="game" value="{{game.title}}" {% if selected_game == game.short %}checked {% endif %}required>
+										<input type="radio" name="game" value="{{game.short}}" {% if selected_game == game.short %}checked {% endif %}required>
 									</label>
 								{% endfor %}
 							</div>
